# vibe-usage-windows

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  settings.html  tailwind.config.cjs  vite.config.ts
.github/workflows/: ci.yml  release.yml
artifacts/: History-copy  vibe-usage-local-qa-signing.cer
artifacts/installed-cli-eisdir/: config.json  state.json
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  runtime.rs  statusline_hook.rs  tray_text.rs  version.rs
crates/core/src/rate_limit/: claude.rs  codex.rs  mod.rs
crates/core/src/statusline/: wrapper.js
docs/: PARITY.md  WINDOWS_CODE_SIGNING_OPTIONS.md
scripts/: build-tauri-windows.ps1  check-version.mjs  fetch-node.mjs  generate-logo-assets.py  generate-updater-manifest.mjs  release-windows.ps1  setup-windows-build-env.ps1  signpath-sign-artifact.ps1  signpath-tauri-sign.ps1  vendor-cli.mjs
src/: PopoverApp.tsx  SettingsApp.tsx  main.tsx  settings-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/cli/: package.json
src-tauri/resources/cli/src/: api.js  claude-roots.js  client-meta.js  config.js  daemon-service.js  daemon.js  index.js  init.js  output.js  reset.js  skill.js  state.js  summary.js  sync.js  tools.js
src-tauri/resources/cli/src/parsers/: amp.js  antigravity-db.js  antigravity.js  claude-code.js  cline.js  codex-cache.js  codex.js  copilot-cli.js  cursor.js  droid.js  gemini-cli.js  grok.js  hermes.js  index.js  kimi-code.js  kiro.js  openclaw.js  opencode.js  pi-coding-agent.js  qwen-code.js  roo-code.js  sqlite.js  trae-cli.js  zcode.js
src-tauri/src/: commands.rs  lib.rs  main.rs  panel.rs  process_utils.rs  state.rs  tray.rs
src-tauri/src/services/: api_client.rs  auto_launch.rs  device_link.rs  mod.rs  rate_limits.rs  scheduler.rs  sync_engine.rs  updater.rs
src/components/: DistributionGrid.tsx  FilterTags.tsx  FooterBar.tsx  HeaderBar.tsx  OnboardingView.tsx  RateLimitCard.tsx  SummaryCards.tsx  TrendChart.tsx
src/lib/: aggregate.ts  api.ts  formatters.ts  modelFamilies.ts  types.ts
src/state/: AppStateContext.tsx
src/styles/: globals.css
tests/: aggregate.test.ts  cliConfigState.test.ts  formatters.test.ts  modelFamilies.test.ts  uploadIdentity.test.ts
