[package]
name = "vibe-usage-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Vibe Usage for Windows — AI coding tool token usage tracker"

[lib]
name = "vibe_usage_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
vibe-core = { path = "../crates/core" }
tauri = { version = "2.8", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# native-tls → SChannel on Windows (pure Rust bindings, no C toolchain needed
# for cross-checks; rustls would pull in `ring`'s C build).
# system-proxy: honor the Windows system proxy — critical for users behind
# proxies (macOS URLSession does this implicitly; reqwest needs the feature).
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "gzip", "system-proxy"] }
auto-launch = "0.5"
open = "5"
dirs = "5"
gethostname = "0.5"
iana-time-zone = "0.1"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
winreg = "0.52"
