[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Platform-agnostic core logic for Vibe Usage for Windows (config IO, rate-limit readers, statusline hook, runtime detection, tray text rendering)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
